# learn_rust

./: Cargo.toml  README.md
examples/: common4_example.rs  common_shadow3_example.rs  section_3_1_4_variables_mutability_shadowing.rs  section_3_2_0_data_types.rs  section_3_2_1_data_types.rs  structs1_example.rs  structs2_example.rs
src/: main.rs
