[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[example]]
name = "section_2_programming_a_guessing_game"
path = "examples/section_2_programming_a_guessing_game.rs"

[[example]]
name = "section_3_1_0_variables_mutability"
path = "examples/section_3_1_0_variables_mutability.rs"

[[example]]
name = "section_3_1_1_variables_mutability"
path = "examples/section_3_1_1_variables_mutability.rs"

[[example]]
name = "section_3_1_2_variables_mutability_constants"
path = "examples/section_3_1_2_variables_mutability_constants.rs"

[[example]]
name = "section_3_1_3_variables_mutability_constants"
path = "examples/section_3_1_3_variables_mutability_constants.rs"

[[example]]
name = "section_3_1_4_variables_mutability_shadowing"
path = "examples/section_3_1_4_variables_mutability_shadowing.rs"

[[example]]
name = "section_3_1_5_variables_mutability_shadowing"
path = "examples/section_3_1_5_variables_mutability_shadowing.rs"

[[example]]
name = "section_3_1_6_variables_mutability_shadowing"
path = "examples/section_3_1_6_variables_mutability_shadowing.rs"

[[example]]
name = "section_3_2_0_data_types"
path = "examples/section_3_2_0_data_types.rs"

[[example]]
name = "section_3_2_1_data_types"
path = "examples/section_3_2_1_data_types.rs"

[[example]]
name = "structs1_example"
path = "examples/structs1_example.rs"

[[example]]
name = "structs2_example"
path = "examples/structs2_example.rs"